kanc/src/tests/sample_code/should_fail/single_file/type_check/duplicate_match_case.k
type U {
    .u: U,
}

type Bool {
    .true: Bool,
    .false: Bool,
}

let foo = match U.u {
    .u => Bool.true,
    .u => Bool.false,
};
